--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
     <title>Boggle Game</title>
 </head>
 <body>
-    <h1>BOGGLE TIME!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! O_O;;;;;;</h1>
+    <h1>BOGGLE TIME!!!!!!!!!!</h1>
 <section id="board">
     <p>You have: <span id="timer">60</span> seconds remaining!</p>
     <p id="game-over" hidden>Time is Up!</p>
